--- a/ppeokkeum/package.json
+++ b/ppeokkeum/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.75",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
