--- a/ppeokkeum/package.json
+++ b/ppeokkeum/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.18",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
