--- a/ppeokkeum/package.json
+++ b/ppeokkeum/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^16.18.75",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "detect-browser": "^5.3.0",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "jquery": "^3.7.1",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.3",
